[project]
name = "moviegraph"
version = "0.1.0"
description = "Some experiments in learning dynamic graphs using MovieLens data."
authors = [
    {name = "David Roth", email="davidroth6@gmail.com"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.8"

keywords = ["movielens", "graph", "dynamic", "temporal"]

dependencies = [
    "torch",
    "torch-geometric-temporal",
    "sentence_transformers"
]

[project.optional-dependencies]
dev = [
    "black",
    "tox"
]

[project.urls]
repository = "https://github.com/davidsroth/moviegraph"

[build-system]
requires = [
    "setuptools >= 65.6.3",
    "setuptools-scm >= 7.1.0"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list =
        py310
        py39
        type

    [testenv]
    deps = pytest
    commands = pytest tests

    [testenv:type]
    deps = mypy
    commands = mypy src
"""